Opened 3 years ago

Closed 3 years ago

#17575 closed bug (fixed)

KDL when haikuporter unmounts packagefs

Reported by: cocobean Owned by: waddlesplash
Priority: high Milestone: R1/beta4
Component: File Systems/packagefs Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by waddlesplash)

Unmounting packageFS crashes on hrev55862 -> hrev55865 x64 for full haikuporter package builds. Not consistent if you conduct haikuporter '-b' non-builds (patch only).

KDL Message: 'Deleted referenceable object that's not on the stack...'

Steps to reproduce:

haikuporter <package>

Expected Results: 'waiting for build package <package> to be deactivated' should complete all build deactivations and unmount successfully.

Attachments (1)

haiku_hrev55865_x64-packagefs-KDL_cocobean.jpg (426.1 KB ) - added by cocobean 3 years ago.
KDL when unmounting packageFS within haikuporter build - Haiku hrev55865 x64

Download all attachments as: .zip

Change History (4)

by cocobean, 3 years ago

KDL when unmounting packageFS within haikuporter build - Haiku hrev55865 x64

comment:1 by cocobean, 3 years ago

Description: modified (diff)

comment:2 by waddlesplash, 3 years ago

Description: modified (diff)
Owner: changed from bonefish to waddlesplash
Status: newin-progress

comment:3 by waddlesplash, 3 years ago

Milestone: UnscheduledR1/beta4
Resolution: fixed
Status: in-progressclosed

Fixed in hrev55866.

Note: See TracTickets for help on using tickets.